tests/cases/should_fail/patterns/pat_match_missing_semi.stderr
error: unexpectedly reached the end of input
  --> $DIR/pat_match_missing_semi.hash:10:16
 9 |           };
10 |           _ => -1
   |                  ^ here
11 |       };
   = help: consider adding a `;`
